--- a/public/expenses.html
+++ b/public/expenses.html
@@ -1,28 +1,89 @@
-﻿<!-- expenses.html build v2025-10-10-2 -->
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Expenses</title>
-  <link rel="stylesheet" href="styles.css?v=1" /><meta name="viewport" content="width=device-width, initial-scale=1" />
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Expenses</title>
+  <style>
+    body{font-family:sans-serif;max-width:720px;margin:2rem auto}
+    table{border-collapse:collapse;width:100%} th,td{border:1px solid #ccc;padding:6px}
+    input,select,button{margin:2px}
+  </style>
+</head>
+<body>
+  <h1>Expenses</h1>
 
-</head><body>
-<h1>Expenses</h1><p><a href="index.html">← Back to Main</a></p>
-<h2>Add Expense</h2>
-<div class="row">
-  <input id="vendor" placeholder="Vendor" />
-  <input id="category" placeholder="Category" />
-  <input id="amount" type="number" step="0.01" placeholder="Amount" />
-  <label><input id="taxable" type="checkbox" /> Taxable</label>
-  <input id="date" type="date" />
-  <input id="notes" placeholder="Notes" />
-  <button id="addBtn">Add Expense</button>
-</div>
-<h2>Expenses List</h2>
-<table id="expTable"><thead><tr><th>Date</th><th>Vendor</th><th>Category</th><th>Amount</th><th>Taxable</th><th>Notes</th><th>Actions</th></tr></thead><tbody></tbody></table>
-<p>Marker: expenses.html build v2025-10-10-2</p>
-<script>
-const $=s=>document.querySelector(s), $$=s=>Array.from(document.querySelectorAll(s));
-document.getElementById('date').value=new Date().toISOString().slice(0,10);
-async function loadExpenses(){const arr=await (await fetch('/api/expenses')).json(); const tbody=$('#expTable tbody'); tbody.innerHTML=''; for(const e of arr){const tr=document.createElement('tr'); tr.innerHTML=`<td>${e.date||''}</td><td>${e.vendor||''}</td><td>${e.category||''}</td><td>${(+e.amount).toFixed(2)}</td><td>${e.taxable?'Yes':'No'}</td><td>${e.notes||''}</td><td><button data-id="${e.id}" class="del">Delete</button></td>`; tbody.appendChild(tr)} $$('#expTable .del').forEach(b=>b.onclick=async()=>{await fetch('/api/expenses/'+b.dataset.id,{method:'DELETE'}); loadExpenses();})}
-$('#addBtn').onclick=async()=>{const p={vendor:$('#vendor').value,category:$('#category').value,amount:$('#amount').value,taxable:$('#taxable').checked,date:$('#date').value,notes:$('#notes').value}; await fetch('/api/expenses',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(p)}); $('#vendor').value=''; $('#category').value=''; $('#amount').value=''; $('#notes').value=''; loadExpenses();}
-loadExpenses();
-</script>
-</body></html>
+  <h2>Add Expense</h2>
+  <div>
+    <label>Vendor: <input id="vendor"></label>
+    <label>Amount: <input type="number" id="amount" min="0" step="0.01" style="width:7rem"></label>
+    <label>Date: <input type="date" id="date"></label>
+    <label>Taxable:
+      <select id="taxable"><option value="1">Taxable</option><option value="0">Non-Taxable</option></select>
+    </label>
+    <button id="addBtn">Add Expense</button>
+  </div>
 
+  <h2>Expense List</h2>
+  <table>
+    <thead><tr><th>ID</th><th>Vendor</th><th>Amount</th><th>Date</th><th>Taxable</th><th>Actions</th></tr></thead>
+    <tbody id="body"></tbody>
+  </table>
+
+  <p><a href="index.html">Back to Main Page</a></p>
+
+  <script>
+    async function load(){
+      const r=await fetch('/api/expenses'); const list=await r.json();
+      const tb=document.getElementById('body'); tb.innerHTML='';
+      (list||[]).forEach(x=>{
+        const tr=document.createElement('tr');
+        tr.innerHTML = `
+          <td>${x.id}</td>
+          <td>${x.vendor||''}</td>
+          <td>$${Number(x.amount||0).toFixed(2)}</td>
+          <td>${x.date||''}</td>
+          <td>${Number(x.taxable)?'Yes':'No'}</td>
+          <td>
+            <button class="edit" data-id="${x.id}">Edit</button>
+            <button class="del"  data-id="${x.id}">Delete</button>
+          </td>`;
+        tb.appendChild(tr);
+      });
+    }
+
+    document.getElementById('addBtn').addEventListener('click', async ()=>{
+      const vendor = document.getElementById('vendor').value.trim() || null;
+      const amount = document.getElementById('amount').value;
+      const date   = document.getElementById('date').value;
+      const taxable= document.getElementById('taxable').value==='1';
+      if(!amount || !date){ alert('Amount and Date are required'); return; }
+      const r = await fetch('/api/expenses', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ vendor, amount, date, taxable }) });
+      if(r.ok){ document.getElementById('amount').value=''; load(); } else { const t=await r.text(); alert('Error: '+t); }
+    });
+
+    document.addEventListener('click', async (e)=>{
+      if(e.target.matches('.del')){
+        const id=e.target.dataset.id; if(!confirm('Delete this expense?')) return;
+        const r = await fetch('/api/expenses/'+id, { method:'DELETE' });
+        if(r.ok) load(); else alert('Error deleting');
+      }
+      if(e.target.matches('.edit')){
+        const id=e.target.dataset.id;
+        const all = await (await fetch('/api/expenses')).json();
+        const x = all.find(y=>String(y.id)===String(id)); if(!x){ alert('Not found'); return; }
+        const vendor = prompt('Vendor:', x.vendor||''); if(vendor===null) return;
+        const amount = prompt('Amount:', x.amount); if(amount===null) return;
+        const date   = prompt('Date (YYYY-MM-DD):', x.date||''); if(date===null) return;
+        const taxS   = prompt('Taxable? (1=yes,0=no):', String(x.taxable?1:0)); if(taxS===null) return;
+        const r = await fetch('/api/expenses/'+id, { method:'PUT', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ vendor, amount, date, taxable: taxS==='1' }) });
+        if(r.ok) load(); else alert('Error updating');
+      }
+    });
+
+    // Prefill date to today
+    (function(){ const t=new Date(); document.getElementById('date').value = t.toISOString().slice(0,10); })();
+
+    load();
+  </script>
+</body>
+</html>
